objects/EUR_CRM_ProductCatalogItem__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Article_Number__c</fullName>
        <formula>IF(AND(ISBLANK( EUR_CRM_Brand_Quality_Size__c ),ISBLANK( EUR_CRM_POS_Material__c)), EUR_CRM_SKU__r.EUR_CRM_Article_no__c  
,&apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_BrandSort__c</fullName>
        <formula>IF(AND(ISBLANK( EUR_CRM_SKU__c ),ISBLANK( EUR_CRM_POS_Material__c )), 
EUR_CRM_Brand_Quality_Size__r.EUR_CRM_Brand_Quality__r.EUR_CRM_Brand__r.Name , 
IF(AND(ISBLANK( EUR_CRM_Brand_Quality_Size__c ),ISBLANK( EUR_CRM_POS_Material__c)), 
EUR_CRM_SKU__r.EUR_CRM_Brand_Quality_Size__r.EUR_CRM_Brand_Quality__r.EUR_CRM_Brand__r.Name , EUR_CRM_POS_Material__r.EUR_CRM_Brand__r.Name ) 


)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality-Size (EU)</label>
        <referenceTo>EUR_CRM_Size__c</referenceTo>
        <relationshipName>Price_Book_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_DeliveryEndDate__c</fullName>
        <label>Delivery end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_DeliveryStartDate__c</fullName>
        <label>Delivery start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_DivisionSort__c</fullName>
        <formula>&apos;Products&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_EndDate__c</fullName>
        <formula>EUR_CRM_PriceBookID__r.EUR_CRM_ValidTo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Active__c</fullName>
        <formula>IF(AND(ISBLANK( EUR_CRM_SKU__c ),ISBLANK( EUR_CRM_POS_Material__c )), 
EUR_CRM_Brand_Quality_Size__r.EUR_CRM_Active__c , 
IF(AND(ISBLANK( EUR_CRM_Brand_Quality_Size__c ),ISBLANK( EUR_CRM_POS_Material__c)), 
EUR_CRM_SKU__r.EUR_CRM_Active__c , EUR_CRM_POS_Material__r.EUR_CRM_Active__c ) 


)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Free__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Free</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_MA_T1_Price__c</fullName>
        <formula>EUR_CRM_SKU__r.EUR_CRM_T1_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MA T1 Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_MA_T2_Price__c</fullName>
        <formula>EUR_CRM_SKU__r.EUR_CRM_T2_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MA T2 Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_MA_T3_Price__c</fullName>
        <formula>EUR_CRM_SKU__r.EUR_CRM_T3_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MA T3 Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_MultiplicationFactor__c</fullName>
        <label>Multiplication Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_OrderView1__c</fullName>
        <label>OrderView1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_OrderView2__c</fullName>
        <label>OrderView2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POS_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POS Material (EU)</label>
        <referenceTo>EUR_CRM_POS_Material__c</referenceTo>
        <relationshipName>Price_Book_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ParentPBIID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent PBI</label>
        <referenceTo>EUR_CRM_ProductCatalogItem__c</referenceTo>
        <relationshipName>Price_Book_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PriceBookID__c</fullName>
        <label>Product Catalog</label>
        <referenceTo>EUR_CRM_ProductCatalog__c</referenceTo>
        <relationshipName>Price_Book_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ProductEAN__c</fullName>
        <label>OLD External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ProductMN__c</fullName>
        <formula>IF( 
NOT(ISBLANK(EUR_CRM_Brand_Quality_Size__c)), 
EUR_CRM_Brand_Quality_Size__r.EUR_CRM_External_ID__c , 
IF( 
NOT(ISBLANK( EUR_CRM_SKU__c)), 
EUR_CRM_SKU__r.EUR_CRM_External_ID__c, 
IF( 
NOT(ISBLANK( EUR_CRM_POS_Material__c )), 
EUR_CRM_POS_Material__r.EUR_CRM_External_ID__c ,
&apos;&apos; 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product External ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ProductName__c</fullName>
        <formula>IF(AND(ISBLANK( EUR_CRM_SKU__c ),ISBLANK( EUR_CRM_POS_Material__c )), 
EUR_CRM_Brand_Quality_Size__r.Name , 
IF(AND(ISBLANK( EUR_CRM_Brand_Quality_Size__c ),ISBLANK( EUR_CRM_POS_Material__c)), 
EUR_CRM_SKU__r.Name , EUR_CRM_POS_Material__r.Name ) 


)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_Name_Text__c</fullName>
        <description>Use to copy paste the text of the product in order to be able to filter by product inside salesforce</description>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_RecommendedSalesPrice__c</fullName>
        <label>Recommended sales price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SAPCode__c</fullName>
        <formula>IF(AND(ISBLANK( EUR_CRM_SKU__c ),ISBLANK( EUR_CRM_POS_Material__c )), 
 EUR_CRM_Brand_Quality_Size__r.EUR_CRM_External_ID__c  , 
IF(AND(ISBLANK( EUR_CRM_Brand_Quality_Size__c ),ISBLANK( EUR_CRM_POS_Material__c)), 
 EUR_CRM_SKU__r.EUR_CRM_External_ID__c  ,  EUR_CRM_POS_Material__r.EUR_CRM_External_ID__c  ) 


)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU_Code__c</fullName>
        <formula>IF(ISBLANK(EUR_CRM_SKU__r.EUR_CRM_SKU_Code__c),
EUR_CRM_SKU__r.EUR_CRM_Article_no__c,
IF(NOT(AND(ISBLANK(EUR_CRM_SKU__r.EUR_CRM_SKU_Code__c),ISBLANK(EUR_CRM_SKU__r.EUR_CRM_Article_no__c))),
EUR_CRM_SKU__r.EUR_CRM_SKU_Code__c,
EUR_CRM_SKU__r.EUR_CRM_SKU_Code__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU (EU)</label>
        <referenceTo>EUR_CRM_SKU__c</referenceTo>
        <relationshipName>Price_Book_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_StartDate__c</fullName>
        <formula>EUR_CRM_PriceBookID__r.EUR_CRM_ValidFrom__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Stock_Status__c</fullName>
        <formula>TEXT(EUR_CRM_SKU__r.EUR_CRM_Stock_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_View1Level1__c</fullName>
        <label>View 1 Level 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_View1Level2__c</fullName>
        <label>View 1 Level 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_View1Level3__c</fullName>
        <label>View 1 Level 3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Price Book Item (EU)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_ProductEAN__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_PriceBookID__c</columns>
        <columns>EUR_CRM_ProductMN__c</columns>
        <columns>EUR_CRM_SKU__c</columns>
        <columns>EUR_CRM_Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_DB</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_PriceBookID__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_ProductMN__c</field>
            <operation>contains</operation>
            <value>DB</value>
        </filters>
        <label>All DB</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_IDG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_IDL</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_PriceBookID__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_ProductMN__c</columns>
        <columns>EUR_CRM_View1Level1__c</columns>
        <columns>EUR_CRM_View1Level2__c</columns>
        <columns>EUR_CRM_View1Level3__c</columns>
        <columns>EUR_CRM_View1Level4__c</columns>
        <columns>EUR_CRM_View2Level1__c</columns>
        <columns>EUR_CRM_View2Level2__c</columns>
        <columns>EUR_CRM_OrderView1__c</columns>
        <columns>EUR_CRM_OrderView2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_External_ID__c</field>
            <operation>contains</operation>
            <value>IDL</value>
        </filters>
        <label>All IDL</label>
        <language>en_US</language>
        <sharedTo>
            <role>EUR_IDG</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PBI-{00000}</displayFormat>
        <label>Price Book Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Book Items (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_Price_Book_Entry</fullName>
        <active>true</active>
        <label>EUR Price Book Entry</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>